<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Saya">

    <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/tentangSaya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/tentang_saya"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/circle_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/your_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tentangSaya" />

                <TextView
                    android:id="@+id/namaPengguna"
                    android:layout_width="183dp"
                    android:layout_height="155dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    android:text="@string/nama_pengguna"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    tools:ignore="TextViewEdits" />

                <TextView
                    android:id="@+id/nomorPengguna"
                    android:layout_width="172dp"
                    android:layout_height="859dp"
                    android:layout_marginTop="152dp"
                    android:inputType="phone"
                    android:text="@string/_6281237782873"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@+id/namaPengguna"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextViewEdits" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budgetbuddy_v1_0_2023_t2ru"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.626" />

                <TextView
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/keluar"
                    android:textColor="@color/red_main"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView"
                    app:layout_constraintVertical_bias="0.642" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    tools:layout_editor_absoluteX="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="3dp"
                            android:text="@string/email"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:hint="@string/maharianidewi_gmail_com"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:paddingStart="3dp"
                            android:text="@string/jenis_kelamin"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <!--            <Spinner-->
                        <!--                android:id="@+id/spinnerGender"-->
                        <!--                android:layout_width="match_parent"-->
                        <!--                android:layout_height="48dp"-->
                        <!--                android:entries="@array/gender_options"-->
                        <!--                android:dropDownItemResource="@layout/custom_spinner_item"-->
                        <!--                android:prompt="@string/gender_hint" />-->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="3dp"
                            android:paddingTop="10dp"
                            android:text="@string/tanggal_lahir"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/editTextBirthday"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:focusable="false"
                            android:hint="@string/dd_mm_yyyy"
                            android:inputType="date"
                            android:textSize="14sp" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:backgroundTint="#278ACF"
                            android:text="@string/ubah"
                            android:textSize="20sp"
                            android:padding="10dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
</FrameLayout>
</ScrollView>