<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        tools:context=".Transaksi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="165dp">

                <TextView
                    android:id="@+id/judultambahtransaksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:radius="10dp"
                    android:text="Tambah Transaksi"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.432"
                    app:strokeColor="@color/D2"
                    app:strokeWidth="1dp"
                    android:gravity="center"/>

                <LinearLayout
                    android:id="@+id/LL_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/judultambahtransaksi">

                <Button
                    android:id="@+id/expanse_button"
                    android:layout_width="179dp"
                    android:layout_height="81dp"
                    android:backgroundTint="@color/white"
                    android:radius="10dp"
                    android:text="@string/pengeluaran"
                    android:textAllCaps="false"
                    android:textColor="#5A5A5A"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/income_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/income_button"
                    android:layout_width="179dp"
                    android:layout_height="81dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/Pendapatan"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/blue_light"
                    android:textColor="@color/blue_dark"
                    android:textSize="16dp" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="461dp"
                    tools:context=".Transaksi"
                    tools:layout_editor_absoluteX="21dp"
                    tools:layout_editor_absoluteY="181dp">

                    <Button
                        android:id="@+id/save_exchange"
                        android:layout_width="340dp"
                        android:layout_height="61dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="372dp"
                        android:layout_marginEnd="16dp"
                        android:backgroundTint="#278ACF"
                        android:padding="10dp"
                        android:text="Simpan"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.428"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/nominal"
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:text="Nominal"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/amount"
                        android:layout_width="347dp"
                        android:layout_height="51dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:text="Rp0"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/kategori"
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="104dp"
                        android:fontFamily="sans-serif"
                        android:text="Kategori"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/category"
                        android:layout_width="347dp"
                        android:layout_height="51dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Pilih Kategori"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/kategori" />

                    <TextView
                        android:id="@+id/tanggal_pendapatan"
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="192dp"
                        android:fontFamily="sans-serif"
                        android:text="Tanggal"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/date"
                        android:layout_width="347dp"
                        android:layout_height="51dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:inputType="text"
                        android:text="@string/dd_mm_yyyy"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tanggal_pendapatan" />

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="347dp"
                        android:layout_height="51dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Isi Deskripsi Singkat"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/keterangan_pendapatan" />

                    <TextView
                        android:id="@+id/keterangan_pendapatan"
                        android:layout_width="79dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="276dp"
                        android:fontFamily="sans-serif"
                        android:text="Keterangan"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </FrameLayout>
</ScrollView>